fix: style down arrow overflow on hero

--- a/static/code/css/ubq.css
+++ b/static/code/css/ubq.css
@@ -1122,6 +1122,7 @@ div#down-arrow-wrapper {
   position: absolute;
   bottom: 48px;
   right: 48px;
+  overflow: unset;
 }
 #Back,
 #Logo {
